--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion's Yawn">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion's Yawn" title="Come into my mouth">
+  
 
 </body>
 </html>
